load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/DataDog/rules_oci
# gazelle:go_naming_convention go_default_library
# gazelle:lang go

npm_link_all_packages(
    name = "node_modules",
)

alias(
    name = "format",
    actual = "//tools/format",
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-binary",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-build_file_proto_mode=disable",
        "-from_file=go.mod",
        "-prune=true",
        "-to_macro=oci/private/repositories/go_repositories.bzl%go_repositories",
    ],
    command = "update-repos",
)

gazelle_binary(
    name = "gazelle-binary",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

alias(
    name = "go",
    actual = "@io_bazel_rules_go//go",
)

pkg_tar(
    name = "release",
    srcs = [
        "//oci:files",
        "//oci/private:files",
        "//oci/private/repositories:files",
        "//oci/repositories:files",
    ],
    empty_files = ["BUILD.bazel"],
    extension = "tar.gz",
)

exports_files(
    ["WORKSPACE"],
    visibility = ["//visibility:public"],
)
