module(
    name = "rules_oci",
    repo_name = "com_github_datadog_rules_oci",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "stardoc", version = "0.8.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_blakesmith_ar",
    "com_github_containerd_containerd",
    "com_github_containerd_log",
    "com_github_datadog_zstd",
    "com_github_docker_docker_credential_helpers",
    "com_github_mitchellh_go_homedir",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_sethvargo_go_retry",
    "com_github_sirupsen_logrus",
    "com_github_stretchr_testify",
    "com_github_urfave_cli_v2",
    "land_oras_oras_go",
    "org_golang_x_sync",
)
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//third_party/com_github_containerd_containerd:EEESUPPORT-11240-logging-and-retries-for-oci-pull.patch",
    ],
    path = "github.com/containerd/containerd",
)

oci_pull = use_repo_rule("//oci:defs.bzl", "oci_pull")

oci_pull(
    name = "ubuntu_focal",
    # Latest at "focal" tag
    digest = "sha256:9d6a8699fb5c9c39cf08a0871bd6219f0400981c570894cd8cbea30d3424a31f",
    registry = "ghcr.io",
    repository = "datadog/rules_oci/ubuntu",
)

register_toolchains(
    "@com_github_datadog_rules_oci//:oci_local_toolchain",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
)
