load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "genbuildfiles.go",
        "main.go",
    ],
    importpath = "github.com/DataDog/rules_oci/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ociutil",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_containerd_containerd//content",
        "@com_github_containerd_containerd//images",
        "@com_github_containerd_containerd//platforms",
        "@com_github_opencontainers_go_digest//:go-digest",
        "@com_github_opencontainers_image_spec//specs-go",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
        "@land_oras_oras_go//pkg/content",
        "@land_oras_oras_go//pkg/oras",
        "@org_golang_x_sync//semaphore",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
