load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "defs",
    bzl_library_target = "//oci:defs",
)

stardoc_with_diff_test(
    name = "providers",
    bzl_library_target = "//oci:providers",
)

stardoc_with_diff_test(
    name = "pull",
    bzl_library_target = "//oci/repositories:pull",
)

update_docs()
