load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("//oci/private:debug_flag.bzl", "debug_flag")

# gazelle:lang go,starlark

exports_files(
    glob(["*.bzl"]),
    visibility = ["//:__subpackages__"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

debug_flag(
    name = "debug",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = [
        ":defs.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//oci:providers.bzl",
        "//oci/private:common.bzl",
        "//oci/private:debug_flag.bzl",
        "//oci/private:oci_image.bzl",
        "//oci/private:oci_image_index.bzl",
        "//oci/private:oci_image_layer.bzl",
        "//oci/private:oci_image_layout.bzl",
        "//oci/private:oci_push.bzl",
        "@aspect_bazel_lib//lib:stamping",
    ],
)

bzl_library(
    name = "providers",
    srcs = [
        ":providers.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = [
        ":repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//oci/private/repositories:oci_pull.bzl",
    ],
)

pkg_files(
    name = "files",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    prefix = "oci",
    visibility = ["//release:__subpackages__"],
)
