load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("//oci/private:debug_flag.bzl", "debug_flag")

# gazelle:lang starlark
# gazelle:resolve starlark starlark @com_github_datadog_rules_oci_crate_index//:defs.bzl @com_github_datadog_rules_oci_crate_index//:srcs
# gazelle:resolve starlark starlark @rules_pkg//pkg:mappings.bzl @rules_pkg//pkg:bzl_srcs
# gazelle:resolve starlark starlark @rules_pkg//pkg:pkg.bzl @rules_pkg//pkg:bzl_srcs
# gazelle:resolve starlark starlark @rules_rust//rust:repositories.bzl @rules_rust//rust:repositories.bzl

# TODO: Delete once CNAB tools stops needing this
toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

exports_files(
    glob([
        "*.bazel",
        "*.bzl",
    ]),
    visibility = ["//:__subpackages__"],
)

debug_flag(
    name = "debug",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "files",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    prefix = "oci",
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//oci/private:oci_image",
        "//oci/private:oci_image_index",
        "//oci/private:oci_image_layer",
        "//oci/private:oci_push",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
)
