load("@crate_index//:defs.bzl", "all_crate_deps")
load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_doc",
    "rust_doc_test",
    "rust_test",
)

exports_files(["Cargo.toml"])

rust_binary(
    name = "ocitool",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "test",
    crate = ":ocitool",
    deps = all_crate_deps(normal_dev = True),
)

rust_doc(
    name = "docs",
    crate = ":ocitool",
    rustdoc_flags = ["--document-private-items"],
)

rust_doc_test(
    name = "docs.test",
    crate = ":ocitool",
)
