load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load(":release.bzl", "go_binary_multi", "release_rules_oci")

go_binary_multi(
    name = "ocitool",
    embed = ["//cmd/ocitool:go_default_library"],
)

release_rules_oci(
    name = "release",
    binaries = [
        ":ocitool.all",
        "//bin:bin-files",
    ],
    rules = ["//oci:oci-files"],
)

gazelle(
    name = "gazelle",
    gazelle = ":default_gazelle_binary",
)

gazelle_binary(
    name = "default_gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune=true",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)
