load(":release.bzl", "go_binary_multi", "release_rules_oci")

go_binary_multi(
    name = "ocitool",
    embed = ["//cmd/ocitool:go_default_library"],
)

release_rules_oci(
    name = "release",
    binaries = [
        ":ocitool.all",
        "//bin:bin-files",
    ],
    rules = ["//oci:oci-files"],
)
