load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/rules_oci/examples/go-multiarch-image",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-multiarch-image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
