load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

# gazelle:lang go

exports_files(
    glob(["*.bzl"]),
    visibility = ["//oci:__subpackages__"],
)

pkg_files(
    name = "files",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    prefix = "oci/private",
    visibility = ["//release:__subpackages__"],
)
