load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

pkg_files(
    name = "files",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    prefix = "oci/private",
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "debug_flag",
    srcs = ["debug_flag.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "oci_image",
    srcs = ["oci_image.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        ":common",
        ":oci_image_dir",
        "//oci:providers",
    ],
)

bzl_library(
    name = "oci_image_dir",
    srcs = ["oci_image_dir.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        ":common",
        ":oci_image_load",
        ":providers",
        "//oci:providers",
        "@rules_pkg//pkg:bzl_srcs",
    ],
)

bzl_library(
    name = "oci_image_index",
    srcs = ["oci_image_index.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        ":common",
        ":oci_image_dir",
        "//oci:providers",
    ],
)

bzl_library(
    name = "oci_image_layer",
    srcs = ["oci_image_layer.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = ["//oci:providers"],
)

bzl_library(
    name = "oci_image_load",
    srcs = ["oci_image_load.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        ":providers",
        "//oci:providers",
        "@aspect_bazel_lib//lib:paths",
    ],
)

bzl_library(
    name = "oci_pulled_image",
    srcs = ["oci_pulled_image.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        "@com_github_datadog_rules_oci//oci:providers",
        "@com_github_datadog_rules_oci//oci/private:common",
        "@com_github_datadog_rules_oci//oci/private:oci_image_dir",
    ],
)

bzl_library(
    name = "oci_push",
    srcs = ["oci_push.bzl"],
    visibility = ["//oci:__subpackages__"],
    deps = [
        ":providers",
        "//oci:providers",
        "@aspect_bazel_lib//lib:stamping",
    ],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//oci:__subpackages__"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//oci:__subpackages__"],
)
