load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "blob",
    srcs = ["blobindex.go"],
    importpath = "github.com/DataDog/rules_oci/pkg/blob",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_containerd_containerd//content",
        "@com_github_containerd_containerd//errdefs",
        "@com_github_opencontainers_go_digest//:go-digest",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
    ],
)
