load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deb2layer",
    srcs = ["deb.go"],
    importpath = "github.com/DataDog/rules_oci/pkg/deb2layer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_blakesmith_ar//:ar"],
)

go_test(
    name = "deb2layer_test",
    srcs = ["deb_test.go"],
    embed = [":deb2layer"],
    deps = ["@com_github_stretchr_testify//assert"],
)
