load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ociutil",
    srcs = [
        "bazel.go",
        "desc.go",
        "fs.go",
        "handler.go",
        "image.go",
        "json.go",
        "layers.go",
        "manifest.go",
        "multiprovider.go",
        "platforms.go",
        "provider.go",
        "push.go",
        "repoing.go",
        "split.go",
        "tar.go",
        "writer.go",
    ],
    importpath = "github.com/DataDog/rules_oci/pkg/ociutil",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
        "@com_github_containerd_containerd//content",
        "@com_github_containerd_containerd//errdefs",
        "@com_github_containerd_containerd//images",
        "@com_github_containerd_containerd//platforms",
        "@com_github_containerd_containerd//reference/docker",
        "@com_github_containerd_containerd//remotes",
        "@com_github_containerd_containerd//remotes/docker",
        "@com_github_opencontainers_go_digest//:go-digest",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
