load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(":go.bzl", "go_multiarch_image")
load("@com_github_datadog_rules_oci//oci:defs.bzl", "oci_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/rules_oci/tests/go-multiarch-image",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "multiarch",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_multiarch_image(
    name = "image",
    archs = [
        "amd64",
        "arm64",
    ],
    base = "@ubuntu_focal//image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "push",
    manifest = "//tests/go-multiarch-image:image.linux-amd64-image",
    registry = "registry.ddbuild.io",
    repository = "rules_oci/hello-world",
)

bzl_library(
    name = "go",
    srcs = ["go.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_datadog_rules_oci//oci:defs",
        "@io_bazel_rules_go//go:def",
    ],
)
